cambios en el contrat swagger
